--- a/aria2c.conf
+++ b/aria2c.conf
@@ -1,9 +1,9 @@
 enable-rpc=true
 rpc-allow-origin-all=true
 rpc-listen-all=true
-max-concurrent-downloads=5
+max-concurrent-downloads=8
 continue=true
-max-connection-per-server=16
+max-connection-per-server=36
 min-split-size=10M
 split=10
 max-overall-download-limit=0
@@ -28,7 +28,7 @@ enable-dht6=true
 dht-file-path=dht.dat
 dht-file-path6=dht6.dat
 dht-listen-port=6881-6999
-user-agent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.117 Safari/537.36
+user-agent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.117 Safari/537.36 libtorrent/1.2.6
 bt-remove-unselected-file=true
 bt-load-saved-metadata=true
 bt-enable-lpd=true
@@ -37,3 +37,9 @@ auto-save-interval=1
 bt-max-peers=0
 enable-peer-exchange=true
 bt-force-encryption=true
+peer-agent=libtorrent/1.2.6
+peer-id-prefix=-lt126-
+bt-hash-check-seed=true
+bt-seed-unverified=true
+bt-save-metadata=false
+bt-remove-unselected-file=true
